--- a/0118_정렬/전화번호목록.md
+++ b/0118_정렬/전화번호목록.md
@@ -2,10 +2,10 @@
 
 * 문제  
 
-https://www.acmicpc.net/problem/5052    
+https://www.acmicpc.net/problem/5052  
 
-![image](https://user-images.githubusercontent.com/29175001/72598898-0b6dc200-3954-11ea-8fc5-223625b4ed78.png 
 
+![image](https://user-images.githubusercontent.com/29175001/72598898-0b6dc200-3954-11ea-8fc5-223625b4ed78.png)
 
 
 * 코드 (실패)  
