--- a/0118_정렬/4.전화번호목록.md
+++ b/0118_정렬/4.전화번호목록.md
@@ -39,3 +39,44 @@ for cs in range(case):
     result = findnumber(numbook, n)
     print(result)
     
+```
+  
+  
+* 수정코드 (성공)
+```Python3
+
+import sys
+input = sys.stdin.readline
+
+
+def findnumber(x, n):
+    for j in range(n-1):
+        x_next = x[j+1]
+        x_slice = x_next[:len(x[j])-1]
+        if x[j][:len(x[j])-1] == x_next[:len(x[j])-1]:
+            return "NO"
+    return "YES"
+
+
+
+case = int(input())
+for cs in range(case):
+    n = int(input())
+    number = []
+
+    for i in range(n):
+        num = input()
+        number.append(num)
+    numbook = sorted(number)
+    result = findnumber(numbook, n)
+    print(result)
+
+
+
+
+
+
+
+
+
+
