--- a/0122_이진탐색/수찾기.md
+++ b/0122_이진탐색/수찾기.md
@@ -10,31 +10,34 @@ https://www.acmicpc.net/problem/1920
 * 코드 (실패)
 
 ```Python3
-import sys
-input = sys.stdin.readline
 
-n1=int(input())
-data = list(map(int,input().split()))
-n2=int(input())
-tg_list = list(map(int,input().split()))
+N = int(input())
+data = list(map(int, input().split()))
+M = int(input())
+target = list(map(int, input().split()))
+
 data.sort()
 
-
-for i in range(n1):
-    start=0
-    end=n1-1
+for i in range(M):
     cnt = 0
 
-    while start <= end:
-        mid=(start+end)//2
-        if data[mid] == tg_list[i]:
+    left = 0
+    right = len(data)
+
+    while left < right:
+        mid = (left + right) // 2
+
+        if left == mid and target[i] != data[mid]:
+            break
+
+        if target[i] > data[mid]:
+            left = mid
+        elif target[i] < data[mid]:
+            right = mid
+        elif target[i] == data[mid]:
             cnt = 1
             print(1)
             break
-        elif data[mid] < tg_list[i]:
-            start = mid + 1
-        else:
-            end = mid - 1
 
     if cnt == 0:
         print(0)
