--- a/0122_이진탐색/수찾기.md
+++ b/0122_이진탐색/수찾기.md
@@ -7,37 +7,27 @@ https://www.acmicpc.net/problem/1920
 ![image](https://user-images.githubusercontent.com/29175001/72868935-e5b33500-3d26-11ea-8532-615b551ec22b.png)  
 
 
-* 코드 (실패)
+* 코드 
 
 ```Python3
 
-N = int(input())
-data = list(map(int, input().split()))
-M = int(input())
-target = list(map(int, input().split()))
+n = int(input())
+a = list(map(int, input().split()))
+a.sort()
 
-data.sort()
+def binary_search(num):
+    l = 0
+    r = n-1
+    while l <= r :
+        mid = (l+r)//2
+        if a[mid] == num :
+            return 1
+        elif a[mid] > num :
+            r = mid - 1
+        else:
+            l = mid + 1
+    return 0
 
-for i in range(M):
-    cnt = 0
-
-    left = 0
-    right = len(data)
-
-    while left < right:
-        mid = (left + right) // 2
-
-        if left == mid and target[i] != data[mid]:
-            break
-
-        if target[i] > data[mid]:
-            left = mid
-        elif target[i] < data[mid]:
-            right = mid
-        elif target[i] == data[mid]:
-            cnt = 1
-            print(1)
-            break
-
-    if cnt == 0:
-        print(0)
+input()
+for num in list(map(int, input().split())):
+    print(binary_search(num))
